trunk/Archive2/a6/1dc49465896516/output
main.cpp:4:5: error: use of undeclared identifier 'sf'
    sf::Vector2f position;
    ^
main.cpp:5:2: error: expected ';' after struct
}
 ^
 ;
main.cpp:11:2: error: C++ requires a type specifier for all declarations
        MovingTurret(Position& positionComponent, float speed)
        ^~~~~~~~~~~~
main.cpp:12:3: error: only constructors take base initializers
                : positionComponent(positionComponent), speed(speed)
                ^
main.cpp:29:2: error: use of undeclared identifier 'sf'
        sf::Clock clock;
        ^
main.cpp:31:13: error: use of undeclared identifier 'sf'
        void shoot(sf::Vector2f target, std::vector<Bullet> & bullets);
                   ^
main.cpp:31:34: error: use of undeclared identifier 'std'
        void shoot(sf::Vector2f target, std::vector<Bullet> & bullets);
                                        ^
main.cpp:31:45: error: expected ')'
        void shoot(sf::Vector2f target, std::vector<Bullet> & bullets);
                                                   ^
main.cpp:31:12: note: to match this '('
        void shoot(sf::Vector2f target, std::vector<Bullet> & bullets);
                  ^
main.cpp:39:14: error: use of undeclared identifier 'sf'
        bool update(sf::Vector2f target, std::vector<Bullet> & bullets, BlockGrid & grid)
                    ^
main.cpp:39:35: error: use of undeclared identifier 'std'
        bool update(sf::Vector2f target, std::vector<Bullet> & bullets, BlockGrid & grid)
                                         ^
main.cpp:39:46: error: expected ')'
        bool update(sf::Vector2f target, std::vector<Bullet> & bullets, BlockGrid & grid)
                                                    ^
main.cpp:39:13: note: to match this '('
        bool update(sf::Vector2f target, std::vector<Bullet> & bullets, BlockGrid & grid)
                   ^
main.cpp:48:12: error: use of undeclared identifier 'sf'
        void draw(sf::RenderTarget & target)
                  ^
main.cpp:41:17: error: use of undeclared identifier 'sf'
                if (target == sf::Vector2f(0, 0))
                              ^
main.cpp:50:10: error: use of undeclared identifier 'sf'
                static sf::RectangleShape rectangle(sf::Vector2f(size, size));
                       ^
main.cpp:50:39: error: use of undeclared identifier 'sf'
                static sf::RectangleShape rectangle(sf::Vector2f(size, size));
                                                    ^
main.cpp:52:26: error: use of undeclared identifier 'sf'
                rectangle.setFillColor(sf::Color(255, 255, 0));
                                       ^
main.cpp:70:15: error: use of undeclared identifier 'sf'
        MovingTurret(sf::Vector2f position, float speed, int shotsPerSecond)
                     ^
main.cpp:86:15: error: use of undeclared identifier 'sf'
    void draw(sf::RenderTarget & target)
              ^
main.cpp:78:7: error: use of undeclared identifier 'turret'
                if(!turret.update())
                    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
